# Drift

./: .gitignore  CMakeLists.txt  planned.md  readme.md
src/: config.hpp  databaseManager.cpp  databaseManager.h  handlers.cpp  handlers.h  keystore.cpp  keystore.h  main.cpp  registry.cpp  registry.h
src/utils/: color_utils.hpp
